# vibe-monitor

./: .gitignore  CONTEXT.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
docs/: mvp-verification.md  vibe-monitor-long-task-design.md
docs/adr/: 0001-desktop-stack.md  0002-codex-app-server.md  0003-local-first-privacy.md
docs/superpowers/plans/: 2026-06-26-vibe-monitor-mvp.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/attention/: mod.rs
src-tauri/src/codex/: jsonrpc.rs  mod.rs  process.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/workspace/: mod.rs
src-tauri/tests/: attention_backend.rs  codex_backend.rs  git_backend.rs  terminal_backend.rs  workspace_backend.rs
src/app/: App.test.tsx  App.tsx
src/app/layout/: AppShell.tsx
src/app/providers/: AppProviders.tsx
src/features/attention/: ApprovalCard.test.tsx  ApprovalCard.tsx  AttentionQueue.test.tsx  AttentionQueue.tsx  api.ts  types.ts  useAttentionQueue.ts
src/features/codex/: CodexComposer.tsx  CodexEventList.tsx  CodexPanel.test.tsx  CodexPanel.tsx  api.ts  types.ts
src/features/git/: GitPanel.test.tsx  GitPanel.tsx  api.ts  types.ts
src/features/settings/: SettingsPanel.tsx
src/features/terminal/: TerminalPanel.test.tsx  TerminalPanel.tsx  api.ts  types.ts
src/features/workspace/: WorkspaceSidebar.test.tsx  WorkspaceSidebar.tsx  api.ts  types.ts  useWorkspaces.ts
src/shared/api/: tauri.ts
src/shared/i18n/: I18nProvider.tsx  (+2 more)
(+1 files in other folders)
